// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui:create:atomic when using an existing pageId (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "svywi4m+5JDQ38UPkngnE1Mjtdo=",
                  "name": "areEnvironmentVariablesSet.ts",
                },
                HashedFile {
                  "hash": "qJrXPWX6cL4N+TMvhr6+n05vNwk=",
                  "name": "generateToken.ts",
                },
                HashedFile {
                  "hash": "AG8M1wAglfYRRL/+Y987D25+YcA=",
                  "name": "token.spec.ts",
                },
                HashedFile {
                  "hash": "LxpAYAmM+yDe4mLtd3Rj6R9S30k=",
                  "name": "token.ts",
                },
              ],
              "hash": "qIYVWdq8oh9lCcu0H1X5XfQchcU=",
              "name": "token",
            },
          ],
          "hash": "sBgXQK+6u5b7XzuUi8zQquqUtaU=",
          "name": "functions",
        },
        HashedFile {
          "hash": "qBh2kK6C/tcpIA4kKT8j7bm10Kw=",
          "name": "jest.config.js",
        },
        HashedFile {
          "hash": "Q5B4b7qfWLJaHE/TZpt/2vLRgUk=",
          "name": "LICENSE",
        },
        HashedFile {
          "hash": "3RItgq2aQ177ZrvBxVNrLLaaRLc=",
          "name": "netlify.toml",
        },
        HashedFile {
          "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
          "name": "README.md",
        },
        HashedFile {
          "hash": "RmeGeAs5hovLIHxguToYky0yJDY=",
          "name": "tsconfig.json",
        },
      ],
      "hash": "MVuHWG3A8rTxFYXfcqRQA/UkK7s=",
      "name": "lambda",
    },
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "YY+tyg0Mw+JNjYdifQfLqfDUASQ=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "XRPU8q6nh23adL66sq+HEqg+lCY=",
                  "name": "template-1.html",
                },
              ],
              "hash": "jh83V2cKEQIWFje8KVLl+s96OXA=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "vgtDa2FVnWYn9t5C1jG63Pdz7hA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "X9NLRdpTye/6iMyj9Y0ddiaI53Y=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "lQPP0quh43EHXmhkaFBG33qW+1A=",
          "name": "components",
        },
        HashedFile {
          "hash": "B8YfCYuao2stXw64J6gW1TONNVg=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "hlBUDBUrW6Vub74g68bUqfs3OIM=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "61GVF7l8bCVXW00H2rtInTKwoqY=",
              "name": "index.css",
            },
          ],
          "hash": "FQZ6fv/Z/8DhwZWuUbrLwgTt6r8=",
          "name": "style",
        },
      ],
      "hash": "MyBnsgmKg3qrQRu4sQZ7FfT7jgQ=",
      "name": "src",
    },
    HashedFile {
      "hash": "jVuOZ6BrKT9HUer88GsGfeySq/w=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "3hfx19GW+7poeUXP9QQZn5h9nn0=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "svywi4m+5JDQ38UPkngnE1Mjtdo=",
                  "name": "areEnvironmentVariablesSet.ts",
                },
                HashedFile {
                  "hash": "qJrXPWX6cL4N+TMvhr6+n05vNwk=",
                  "name": "generateToken.ts",
                },
                HashedFile {
                  "hash": "AG8M1wAglfYRRL/+Y987D25+YcA=",
                  "name": "token.spec.ts",
                },
                HashedFile {
                  "hash": "LxpAYAmM+yDe4mLtd3Rj6R9S30k=",
                  "name": "token.ts",
                },
              ],
              "hash": "qIYVWdq8oh9lCcu0H1X5XfQchcU=",
              "name": "token",
            },
          ],
          "hash": "sBgXQK+6u5b7XzuUi8zQquqUtaU=",
          "name": "functions",
        },
        HashedFile {
          "hash": "qBh2kK6C/tcpIA4kKT8j7bm10Kw=",
          "name": "jest.config.js",
        },
        HashedFile {
          "hash": "Q5B4b7qfWLJaHE/TZpt/2vLRgUk=",
          "name": "LICENSE",
        },
        HashedFile {
          "hash": "3RItgq2aQ177ZrvBxVNrLLaaRLc=",
          "name": "netlify.toml",
        },
        HashedFile {
          "hash": "JcgnYZDTiQ6EqMwKIuEh9x+kLlA=",
          "name": "README.md",
        },
        HashedFile {
          "hash": "RmeGeAs5hovLIHxguToYky0yJDY=",
          "name": "tsconfig.json",
        },
      ],
      "hash": "MVuHWG3A8rTxFYXfcqRQA/UkK7s=",
      "name": "lambda",
    },
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "YY+tyg0Mw+JNjYdifQfLqfDUASQ=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "XRPU8q6nh23adL66sq+HEqg+lCY=",
                  "name": "template-1.html",
                },
              ],
              "hash": "jh83V2cKEQIWFje8KVLl+s96OXA=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "vgtDa2FVnWYn9t5C1jG63Pdz7hA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "X9NLRdpTye/6iMyj9Y0ddiaI53Y=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "lQPP0quh43EHXmhkaFBG33qW+1A=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "hlBUDBUrW6Vub74g68bUqfs3OIM=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "61GVF7l8bCVXW00H2rtInTKwoqY=",
              "name": "index.css",
            },
          ],
          "hash": "FQZ6fv/Z/8DhwZWuUbrLwgTt6r8=",
          "name": "style",
        },
      ],
      "hash": "UZ35HpT9JE5Y/7Sbk5K8Q2tlfQ8=",
      "name": "src",
    },
    HashedFile {
      "hash": "jVuOZ6BrKT9HUer88GsGfeySq/w=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "HSw9W0o0wI7BWjBbiVcl9fLkMRI=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (using the list prompt of available pages) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "Jy9yA5W89BgTcZN4pVbSygA3w9U=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "8HGPil/NJ96KWhjo/uk9JBaq9us=",
          "name": "setup-lambda.mjs",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "0DHKkhnIXmyyA6198J3HAA9T0C0=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "ErdFGgbxq+C0LOYeQvVh59O3JYA=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "Xff4jn7lIoJUUtjDjOH+FACRciM=",
                  "name": "template-1.html",
                },
              ],
              "hash": "gcA5JEvFE0rPliUetRfIoo2EP+Q=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "YTj99Fegnant/k2ql9TPe2YMIKI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "q1Hnmgypio/LCK0csDi0uwZUZBg=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "WTNvX4aKbAWuOwDGCn8De81zB24=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "CUouJ7KRaYkS35p9RQ6d7HwrEwQ=",
              "name": "sample-result-component",
            },
          ],
          "hash": "sKU3WMjer0bAf7UtOHeZHkBNEmE=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "VYQYwWUyFPlPYQDod3YJsXVOEiQ=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "ygdkeGA2hXdvtcqJyetblv/fdrw=",
              "name": "index.css",
            },
          ],
          "hash": "lRdUDVao1PTEjkh/JyuWMC0NvKk=",
          "name": "style",
        },
      ],
      "hash": "tIvV8gWPMiQVRjCjzTNTfEEOoUQ=",
      "name": "src",
    },
    HashedFile {
      "hash": "XRdANxlMd+KVd0HuNLxu+WqpRu0=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "hREXUcwShvwFXr8i+e0Mtt3BLnE=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using the default page config (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "Jy9yA5W89BgTcZN4pVbSygA3w9U=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "8HGPil/NJ96KWhjo/uk9JBaq9us=",
          "name": "setup-lambda.mjs",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "0DHKkhnIXmyyA6198J3HAA9T0C0=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "X8T+MmiPJFNu/lwXh6d29i/YhYo=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "OMU1pEfGxxywcokm8aFD8znPyaI=",
                  "name": "template-1.html",
                },
              ],
              "hash": "W1lEfKcMoS9W1dKtbS/qCjUkWkQ=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "YTj99Fegnant/k2ql9TPe2YMIKI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "q1Hnmgypio/LCK0csDi0uwZUZBg=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "WTNvX4aKbAWuOwDGCn8De81zB24=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "CUouJ7KRaYkS35p9RQ6d7HwrEwQ=",
              "name": "sample-result-component",
            },
          ],
          "hash": "bCmtp7oSx57hExkjNmsDKz/kH/I=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "VYQYwWUyFPlPYQDod3YJsXVOEiQ=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Dp2EpyDmwkxrxWxZxv0cM41ulEs=",
              "name": "index.css",
            },
          ],
          "hash": "aAm3g7fNVc/yWUitXMGFxqC9GIg=",
          "name": "style",
        },
      ],
      "hash": "Aoo+O/XADnvB2BB2L7rxMNSElVQ=",
      "name": "src",
    },
    HashedFile {
      "hash": "XRdANxlMd+KVd0HuNLxu+WqpRu0=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "LollTEIcqbvmu3s05590vR40Erc=",
  "name": "normalizedDir",
}
`;
